# spins-b

./: .buildinfo  .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG  Makefile  README.md  README.rst  examples.html  examples_grating_coupler.html  genindex.html  index.html  introduction.html  objects.inv  overview.html  pylintrc  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: pages.yml  pythonpublish.yml  test_code.yml  test_code_updated_requirements.yml  test_docs.yml
_sources/: overview.md.txt
_sources/goos/: advanced.rst.txt  tips.rst.txt
_sources/invdes/: examples_grating_coupler.rst.txt
docs/: Makefile  conf.py  examples_grating_coupler.md  examples_grating_coupler.rst  index.rst  introduction.md  introduction.rst  overview.rst
docs/goos/: basic.rst  extending.rst  index.rst  installation.rst  introduction.rst  tips.rst
docs/invdes/: examples.rst  examples_grating_coupler.rst  index.rst
examples/broadband_gratings/: broadband_grating.py  monitor_spec.yml
examples/goos/: README.md
examples/goos/bend90/: bend90.py
examples/goos/grating_1d/: grating_1d.py
examples/goos/interactive_colab/: bend90.ipynb  grating_1d.ipynb
examples/goos/optplan_examples/: simple_opt.py
examples/grating_coupler/: grating.py  monitor_spec.yml  sim_bg.gds  sim_fg.gds  test_grating.py
examples/invdes/grating_coupler/: grating.py
examples/invdes/wdm2/: monitor_processing_example.ipynb  monitor_spec.yml  sim_fg.gds  wdm2.py
examples/wdm2/: monitor_spec.yml  sim_bg.gds  test_wdm2.py
goos/: advanced.html  basic.html  extending.html  index.html  installation.html  introduction.html  tips.html
invdes/: examples.html  examples_grating_coupler.html  index.html
scripts/: presubmit
spins/: __init__.py
spins/examples/goos/: README.md
spins/fdfd_solvers/: __init__.py  dipole.py  local_matrix_solvers.py  maxwell.py  phc_mode_solver.py  waveguide_mode.py
spins/fdfd_tools/: __init__.py  free_space_sources.py  functional.py  grid.py  operators.py  solvers.py  test_grid.py  types.py  vectorization.py  waveguide.py  waveguide_mode.py
spins/gds/: __init__.py  gen_gds.py  parse_gds.py  test_parse_gds.py
spins/gds/testdata/: rect.gds  rect_um.gds  tlc_test_gds1.gds  tlc_test_gds2.gds  tlc_test_gds3.gds
spins/goos/: __init__.py  array.py  common_schemas.py  compat.py  flows.py  generic.py  graph_executor.py  grating.py  material.py  math.py  optimize.py  schema_registry.py  shapes.py  test_array.py  test_flows.py  test_generic.py  test_graph_executor.py  test_grating.py  test_math.py  test_optimize.py  test_shapes.py  util.py
spins/goos/optplan/: __init__.py  context.py  optplan.py  schema.py  schema_optplan.py  schema_types.py  schema_utils.py  test_optplan.py  test_schema.py  test_schema_types.py
spins/goos_sim/maxwell/: __init__.py  render.py  simspace.py  simulate.py  test_render.py  test_simulate.py
spins/gridlock/: __init__.py  _helpers.py  direction.py  error.py  float_raster.py  grid.py  grid_type.py  selection_matrix.py  test_direction.py  test_float_raster.py  test_grid.py
spins/invdes/optimization/: __init__.py  constrained_optimizer.py  gradient_descent.py  problems.py  scipy_optimizer.py  test_constrained_optimizer.py  test_gradient_descent.py  test_scipy_optimizer.py
spins/invdes/parametrization/: __init__.py  composite_parametrization.py  cubic_utils.py  grating_parametrization.py  parametrization.py  test_composite_parametrization.py  test_cubic_utils.py  test_grating_parametrization.py  test_parametrization.py
spins/invdes/problem/: __init__.py  emobjective.py  (+14 more)
spins/material/: __init__.py  material.py  test_material.py
(+48 files in other folders)
